--- a/public/index.html
+++ b/public/index.html
@@ -12,12 +12,12 @@
 			crossorigin="anonymous"
 		/>
 		<link rel="stylesheet" href="css/style.css" />
-		<title>RefArch Group Chat</title>
+		<title>Group Shopping</title>
 	</head>
 	<body>
 		<div class="join-container">
 			<header class="join-header">
-				<h1><i class="fas fa-kiwi-bird"></i> RefArch </h1>
+				<h1><i class="fas fa-kiwi-bird"></i> Group Shopping </h1>
 			</header>
 			<main class="join-main">
 				<form action="chat.html">
