--- a/public/index.html
+++ b/public/index.html
@@ -43,22 +43,22 @@
 						/>
 					</div>
 					<div class="form-control">
-						<label for="room">Chat Channel</label>
-						<select name="room" id="room">
-							<option value="Business">Business </option>
-							<option value="Technology">Technology</option>
-							<option value="Sport">Sports</option>
-							<option value="news">International News</option>
-							<option value="cats">Just Cats</option>
-						</select>
+						<input
+							type="hidden"
+							name="room"
+							id="room"
+							placeholder="Enter room..."
+							value="Technology"
+							required
+						/>
 					</div>
 					<div class="form-control">
-						<label for="groupname">groupname</label>
 						<input
-							type="text"
+							type="hidden"
 							name="groupname"
 							id="groupname"
 							placeholder="Enter groupname..."
+							value="Group Conversation Commerce"
 							required
 						/>
 					</div>
