--- a/public/index.html
+++ b/public/index.html
@@ -63,7 +63,7 @@
 						/>
 					</div>
           <div class="flex">
-            <button type="submit" class="btn">Login to Chat</button>
+            <button type="submit" class="btn">Login to Group Shopping</button>
           </div>
 				</form>
 			</main>
